spade-tests/src/snapshots/spade_tests__parser__negative_unsigned_integer_literal.snap
---
source: spade-tests/src/parser.rs
---
fn test() {
    let _ = -5u4;
}


error: Cannot apply unary minus to unsigned integer literal
  ┌─ testinput:2:13
  │
2 │     let _ = -5u4;
  │             ^^^^
  │
  = help: Only signed integers can have negative values
  = Try making the integer signed
  │
2 │     let _ = -5i4;
  │             ~~~~
